--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ exclude = .git,__pycache__,env,node_modules,.tmp,./webpay/certificates/*,./webpa
 # E501 line too long
 # E722 do not use bare except
 # E731 do not assign a lambda expression, use a def
-ignore = D100,D101,D102,D103,D104,D105,E501,E722,E731
+ignore = E501
 
 # To autofix:
 # autopep8 --in-place --recursive --verbose -aa -j 0 .
