--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [flake8]
-exclude = .git,__pycache__,env,node_modules,.tmp,./webpay/certificates/*,./webpay/libwebpay/*,*/migrations/*,uncommit,bb_scripts,
+exclude = .git,__pycache__,env,node_modules,.tmp,./webpay/certificates/*,./webpay/libwebpay/*,*/migrations/*,uncommit,settings.py
 # D100 missing docstring in public module
 # D101 Missing docstring in public class
 # D102 Missing docstring in public method
 # D104 Missing docstring in public package
 # D105 Missing docstring in magic method
-# E501 line too long
+# E501 line too long (settings)
 # E722 do not use bare except
 # E731 do not assign a lambda expression, use a def
-ignore = E501
+#ignore = E501
 
 # To autofix:
 # autopep8 --in-place --recursive --verbose -aa -j 0 .
